assignment3-ver1.0/assignment3/initial/target/CSELParser.py
# Generated from main/csel/parser/CSEL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'$'", "<INVALID>", 
                     "'+'", "'*'", "'!'", "'||'", "'!='", "'<'", "'<='", 
                     "'='", "'-'", "'/'", "'%'", "'&&'", "'=='", "'>'", 
                     "'>='", "'+.'", "'==.'", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "'['", "']'", "'.'", "':'", "'Break'", 
                     "'Continue'", "'If'", "'Else'", "'Elif'", "'While'", 
                     "'For'", "'Of'", "'In'", "'Let'", "'True'", "'False'", 
                     "'Call'", "'Number'", "'Boolean'", "'String'", "'JSON'", 
                     "'Constant'", "'Return'", "'Function'", "'Array'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT_LINES", "NORM_ID", "CONST_ID", 
                      "NUMBER_LIT", "BOOLEAN_LIT", "DOLLAR", "STRINGLIT", 
                      "ADD", "MUL", "NOT", "OR", "NEQ", "LT", "LTEQ", "ASSIGN", 
                      "SUB", "DIV", "MOD", "AND", "EQ", "GT", "GTEQ", "STR_ADD", 
                      "STR_COMPARE", "LB", "RB", "LP", "RP", "SM", "CM", 
                      "LS", "RS", "DOT", "COLON", "BREAK", "CONTINUE", "IF", 
                      "ELSE", "ELIF", "WHILE", "FOR", "OF", "IN", "LET", 
                      "TRUE", "FALSE", "CALL", "NUMBER", "BOOLEAN", "STRING", 
                      "JSON", "CONSTANT", "RETURN", "FUNCTION", "ARRAY", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydecls = 1
    RULE_constant_decl = 2
    RULE_funcdecl = 3
    RULE_vardecl_stmt = 4
    RULE_var_temp = 5
    RULE_var_constant = 6
    RULE_paralist = 7
    RULE_paradecl = 8
    RULE_exp_0 = 9
    RULE_exp_1 = 10
    RULE_exp_2 = 11
    RULE_exp_3 = 12
    RULE_exp_4 = 13
    RULE_exp_5 = 14
    RULE_exp_6 = 15
    RULE_exp_7 = 16
    RULE_exp_8 = 17
    RULE_index_operators = 18
    RULE_key_operators = 19
    RULE_operands = 20
    RULE_assign_stmt = 21
    RULE_lhs = 22
    RULE_if_stmt = 23
    RULE_while_stmt = 24
    RULE_for_stmt = 25
    RULE_forin_stmt = 26
    RULE_forof_stmt = 27
    RULE_break_stmt = 28
    RULE_continue_stmt = 29
    RULE_return_stmt = 30
    RULE_funcalls = 31
    RULE_block_stmt = 32
    RULE_stmt = 33
    RULE_indexdecl = 34
    RULE_json_lit = 35
    RULE_listkeyvalue = 36
    RULE_array_lit = 37
    RULE_normal_lit = 38
    RULE_primtypes = 39

    ruleNames =  [ "program", "manydecls", "constant_decl", "funcdecl", 
                   "vardecl_stmt", "var_temp", "var_constant", "paralist", 
                   "paradecl", "exp_0", "exp_1", "exp_2", "exp_3", "exp_4", 
                   "exp_5", "exp_6", "exp_7", "exp_8", "index_operators", 
                   "key_operators", "operands", "assign_stmt", "lhs", "if_stmt", 
                   "while_stmt", "for_stmt", "forin_stmt", "forof_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "funcalls", 
                   "block_stmt", "stmt", "indexdecl", "json_lit", "listkeyvalue", 
                   "array_lit", "normal_lit", "primtypes" ]

    EOF = Token.EOF
    WS=1
    COMMENT_LINES=2
    NORM_ID=3
    CONST_ID=4
    NUMBER_LIT=5
    BOOLEAN_LIT=6
    DOLLAR=7
    STRINGLIT=8
    ADD=9
    MUL=10
    NOT=11
    OR=12
    NEQ=13
    LT=14
    LTEQ=15
    ASSIGN=16
    SUB=17
    DIV=18
    MOD=19
    AND=20
    EQ=21
    GT=22
    GTEQ=23
    STR_ADD=24
    STR_COMPARE=25
    LB=26
    RB=27
    LP=28
    RP=29
    SM=30
    CM=31
    LS=32
    RS=33
    DOT=34
    COLON=35
    BREAK=36
    CONTINUE=37
    IF=38
    ELSE=39
    ELIF=40
    WHILE=41
    FOR=42
    OF=43
    IN=44
    LET=45
    TRUE=46
    FALSE=47
    CALL=48
    NUMBER=49
    BOOLEAN=50
    STRING=51
    JSON=52
    CONSTANT=53
    RETURN=54
    FUNCTION=55
    ARRAY=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    UNTERMINATED_COMMENT=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def manydecls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ManydeclsContext)
            else:
                return self.getTypedRuleContext(CSELParser.ManydeclsContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.manydecls()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.LET) | (1 << CSELParser.CONSTANT) | (1 << CSELParser.FUNCTION))) != 0)):
                    break

            self.state = 85
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl_stmt(self):
            return self.getTypedRuleContext(CSELParser.Vardecl_stmtContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(CSELParser.FuncdeclContext,0)


        def constant_decl(self):
            return self.getTypedRuleContext(CSELParser.Constant_declContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_manydecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydecls" ):
                return visitor.visitManydecls(self)
            else:
                return visitor.visitChildren(self)




    def manydecls(self):

        localctx = CSELParser.ManydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecls)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.vardecl_stmt()
                pass
            elif token in [CSELParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.funcdecl()
                pass
            elif token in [CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.constant_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def var_constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_constantContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_constantContext,i)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_constant_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant_decl" ):
                return visitor.visitConstant_decl(self)
            else:
                return visitor.visitChildren(self)




    def constant_decl(self):

        localctx = CSELParser.Constant_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constant_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(CSELParser.CONSTANT)
            self.state = 93
            self.var_constant()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 94
                self.match(CSELParser.CM)
                self.state = 95
                self.var_constant()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def NORM_ID(self):
            return self.getToken(CSELParser.NORM_ID, 0)

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def RB(self):
            return self.getToken(CSELParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(CSELParser.Block_stmtContext,0)


        def paralist(self):
            return self.getTypedRuleContext(CSELParser.ParalistContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = CSELParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(CSELParser.FUNCTION)
            self.state = 104
            self.match(CSELParser.NORM_ID)
            self.state = 105
            self.match(CSELParser.LB)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.NORM_ID or _la==CSELParser.CONST_ID:
                self.state = 106
                self.paralist()


            self.state = 109
            self.match(CSELParser.RB)
            self.state = 110
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def var_temp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_tempContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_tempContext,i)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_vardecl_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_stmt" ):
                return visitor.visitVardecl_stmt(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_stmt(self):

        localctx = CSELParser.Vardecl_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(CSELParser.LET)
            self.state = 113
            self.var_temp()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 114
                self.match(CSELParser.CM)
                self.state = 115
                self.var_temp()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_tempContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NORM_ID(self):
            return self.getToken(CSELParser.NORM_ID, 0)

        def index_operators(self):
            return self.getTypedRuleContext(CSELParser.Index_operatorsContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def primtypes(self):
            return self.getTypedRuleContext(CSELParser.PrimtypesContext,0)


        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def exp_0(self):
            return self.getTypedRuleContext(CSELParser.Exp_0Context,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_temp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_temp" ):
                return visitor.visitVar_temp(self)
            else:
                return visitor.visitChildren(self)




    def var_temp(self):

        localctx = CSELParser.Var_tempContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_temp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(CSELParser.NORM_ID)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LS:
                self.state = 124
                self.index_operators()


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 127
                self.match(CSELParser.COLON)
                self.state = 128
                self.primtypes()


            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 131
                self.match(CSELParser.ASSIGN)
                self.state = 132
                self.exp_0()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_constantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST_ID(self):
            return self.getToken(CSELParser.CONST_ID, 0)

        def index_operators(self):
            return self.getTypedRuleContext(CSELParser.Index_operatorsContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def primtypes(self):
            return self.getTypedRuleContext(CSELParser.PrimtypesContext,0)


        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def exp_0(self):
            return self.getTypedRuleContext(CSELParser.Exp_0Context,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_constant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_constant" ):
                return visitor.visitVar_constant(self)
            else:
                return visitor.visitChildren(self)




    def var_constant(self):

        localctx = CSELParser.Var_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(CSELParser.CONST_ID)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LS:
                self.state = 136
                self.index_operators()


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 139
                self.match(CSELParser.COLON)
                self.state = 140
                self.primtypes()


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 143
                self.match(CSELParser.ASSIGN)
                self.state = 144
                self.exp_0()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paradecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ParadeclContext)
            else:
                return self.getTypedRuleContext(CSELParser.ParadeclContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)




    def paralist(self):

        localctx = CSELParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paralist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.paradecl()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 148
                self.match(CSELParser.CM)
                self.state = 149
                self.paradecl()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParadeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NORM_ID(self):
            return self.getToken(CSELParser.NORM_ID, 0)

        def CONST_ID(self):
            return self.getToken(CSELParser.CONST_ID, 0)

        def indexdecl(self):
            return self.getTypedRuleContext(CSELParser.IndexdeclContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_paradecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParadecl" ):
                return visitor.visitParadecl(self)
            else:
                return visitor.visitChildren(self)




    def paradecl(self):

        localctx = CSELParser.ParadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paradecl)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(CSELParser.NORM_ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(CSELParser.CONST_ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.indexdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Exp_1Context)
            else:
                return self.getTypedRuleContext(CSELParser.Exp_1Context,i)


        def STR_ADD(self):
            return self.getToken(CSELParser.STR_ADD, 0)

        def STR_COMPARE(self):
            return self.getToken(CSELParser.STR_COMPARE, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_exp_0

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_0" ):
                return visitor.visitExp_0(self)
            else:
                return visitor.visitChildren(self)




    def exp_0(self):

        localctx = CSELParser.Exp_0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exp_0)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.exp_1()
                self.state = 161
                self.match(CSELParser.STR_ADD)
                self.state = 162
                self.exp_1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.exp_1()
                self.state = 165
                self.match(CSELParser.STR_COMPARE)
                self.state = 166
                self.exp_1()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.exp_1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Exp_2Context)
            else:
                return self.getTypedRuleContext(CSELParser.Exp_2Context,i)


        def EQ(self):
            return self.getToken(CSELParser.EQ, 0)

        def NEQ(self):
            return self.getToken(CSELParser.NEQ, 0)

        def LT(self):
            return self.getToken(CSELParser.LT, 0)

        def GT(self):
            return self.getToken(CSELParser.GT, 0)

        def LTEQ(self):
            return self.getToken(CSELParser.LTEQ, 0)

        def GTEQ(self):
            return self.getToken(CSELParser.GTEQ, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_exp_1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_1" ):
                return visitor.visitExp_1(self)
            else:
                return visitor.visitChildren(self)




    def exp_1(self):

        localctx = CSELParser.Exp_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exp_1)
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.exp_2(0)
                self.state = 172
                self.match(CSELParser.EQ)
                self.state = 173
                self.exp_2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.exp_2(0)
                self.state = 176
                self.match(CSELParser.NEQ)
                self.state = 177
                self.exp_2(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.exp_2(0)
                self.state = 180
                self.match(CSELParser.LT)
                self.state = 181
                self.exp_2(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 183
                self.exp_2(0)
                self.state = 184
                self.match(CSELParser.GT)
                self.state = 185
                self.exp_2(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 187
                self.exp_2(0)
                self.state = 188
                self.match(CSELParser.LTEQ)
                self.state = 189
                self.exp_2(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 191
                self.exp_2(0)
                self.state = 192
                self.match(CSELParser.GTEQ)
                self.state = 193
                self.exp_2(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 195
                self.exp_2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_3(self):
            return self.getTypedRuleContext(CSELParser.Exp_3Context,0)


        def exp_2(self):
            return self.getTypedRuleContext(CSELParser.Exp_2Context,0)


        def OR(self):
            return self.getToken(CSELParser.OR, 0)

        def AND(self):
            return self.getToken(CSELParser.AND, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_exp_2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_2" ):
                return visitor.visitExp_2(self)
            else:
                return visitor.visitChildren(self)


